5/24/13 completed port of beaker view
5/24/13 add visual cue for inside-bottom of beaker
5/24/13 add label to beaker
5/24/13 use rgb values for solute colors
5/24/13 partial port of beaker view
5/24/13 model ported from Java to JS
5/24/13 set up skeleton for Molarity sim
5/24/13 create molarity repo in GitHub