@@ -1,3 +1,5 @@
+5/24/13 add "Show Values" check box
+5/24/13 wrote my own CheckBox, because sun.CheckBox isn't usable with Property and is embedded in a control panel
 5/24/13 completed port of beaker view
 5/24/13 add visual cue for inside-bottom of beaker
 5/24/13 add label to beaker
